--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".splashscreen"
             android:label="@string/app_name"
@@ -33,6 +33,14 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".activity.MyCollectionActivity"
+            android:label="@string/title_activity_my_collection" >
+        </activity>
+        <activity
+            android:name=".activity.RandomFactActivity"
+            android:label="@string/title_activity_random_fact" >
         </activity>
     </application>
 
